# mbtalerts

./: .gitignore  Cargo.toml  README.md  mbtalerts.tf
.github/workflows/: build-and-deploy.yml  ci.yml  claude-code-review.yml
src/: ai.rs  calendar.rs  gtfs.rs  lambda.rs  lib.rs  main.rs  mbta.rs  mbtalerts.rs  summary.rs  types.rs
src/mbta-client/: .gitignore  openapi.json
tests/fixtures/: alerts.json
