[package]
name = "mbtalerts"
authors = ["Jacob Luszcz"]
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mbtalerts"
path = "src/main.rs"

[[bin]]
name = "bootstrap"
path = "src/lambda.rs"

[dependencies]
again = "0.1"
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["env"] }
fern = "0.7"
gcp_auth = "0.12"
lambda_runtime = "1.*"
log = "0.4"
reqwest = { version = "0.13", features = ["gzip", "json", "query"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.*"
tokio = { version = "1.*", features = ["full"] }
