[package]
name = "mbtalerts"
authors = ["Jacob Luszcz"]
version = "0.1.0"
edition = "2024"
default-run = "mbtalerts"

[[bin]]
name = "mbtalerts"
path = "src/main.rs"

[[bin]]
name = "bootstrap"
path = "src/lambda.rs"

[dependencies]
again = "0.1"
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["env"] }
gcp_auth = "0.12"
jluszcz_rust_utils = { git = "https://github.com//jluszcz/rust-utils" }
lambda_runtime = "1.*"
log = "0.4"
reqwest = { version = "0.13", features = ["gzip", "json", "query"] }
rustls = { version = "0.23", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.*"
tokio = { version = "1.*", features = ["full"] }
