[package]
name = "mbtalerts"
authors = ["Jacob Luszcz"]
version = "0.1.0"
edition = "2024"
default-run = "mbtalerts"

[[bin]]
name = "mbtalerts"
path = "src/main.rs"

[[bin]]
name = "lambda"
path = "src/lambda.rs"

[dependencies]
anyhow = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = { version = "1", features = ["behavior-version-latest"] }
chrono = "0"
chrono-tz = "0"
clap = "4"
futures = "0"
gcp_auth = "0"
jluszcz_rust_utils = { git = "https://github.com/jluszcz/rust-utils", features = ["query"] }
lambda_runtime = "1"
log = "0"
reqwest = { version = "0", features = ["gzip", "json"] }
rustls = { version = "0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
